# pyodide-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
pyodide_cli/: __init__.py  app.py
pyodide_cli/tests/: test_cli.py
pyodide_cli/tests/plugin-test/: pyproject.toml
pyodide_cli/tests/plugin-test/plugin_test/: app.py  cli.py  main.py
