[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyodide-cli"
dynamic = ["version"]
authors = [{name = "Pyodide developers"}]
description = '"The command line interface for the Pyodide project"'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
dependencies = [
    "typer[all]",
    "rich",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/pyodide/pyodide"
"Bug Tracker" = "https://github.com/pyodide/pyodide/issues"
Documentation = "https://pyodide.org/en/stable/"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.version]
source = "vcs"

[project.scripts]
pyodide = "pyodide_cli.__main__:main"

[tool.pycln]
all = true

[tool.isort]
profile = "black"
known_first_party = [
  "pyodide",
  "pyodide_js",
  "micropip",
  "pyodide_build",
  "_pyodide",
]
