[metadata]
name = pyodide-cli
version = 0.0.1
author = Pyodide developers
description = "The command line interface for the Pyodide project"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent


[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.10
install_requires =
    typer[all]
    rich

[options.entry_points]
console_scripts =
    pyodide = pyodide_cli.__main__:main
