[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-test"
version = "1.0.0"
authors = []

[project.entry-points."pyodide.cli"]
plugin_test_func = "plugin_test.main:main"
plugin_test_app = "plugin_test.app:app"
plugin_test_cli = "plugin_test.cli:cli"
